add header code for css and html

--- a/index.html
+++ b/index.html
@@ -3,8 +3,24 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="./Resources/CSS/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap" rel="stylesheet">
   </head>
   <body>
-    
+    <header>
+      <h1 class="title">The VC Experience</h1>
+      <ul class="nav">
+        <li><a href="#">Mission Statement</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Investment Team</a></li>
+      </ul>
+    </header>
+    <main>
+      <section class="mission">
+        <div class="mission-text">
+          <h2>The VC Experience</h2>
+          <p>Our fund is committed to the furthering entrepreneurs in the mobility sector.</p>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
