--- a/index.html
+++ b/index.html
@@ -21,6 +21,32 @@
           <p>Our fund is committed to the furthering entrepreneurs in the mobility sector.</p>
         </div>
       </section>
+      <section class="portfolio">
+        <h2>Our Mobility Portfolio</h2>
+        <p>Impacting diverse sectors of mobility to better the human experience and the world we inhabit</p>
+        <div class="container">
+          <figure>
+            <img src="./Resources/images/2act785jsq_cutting_aviation_pollution_airplane_at_sunset_shutterstock.jpg">
+            <figcaption>AeroArgonauts</figcaption>
+          </figure>
+          <figure>
+            <img src="./Resources/images/bently.webp">
+            <figcaption>AutoBueno</figcaption>
+          </figure>
+          <figure>
+            <img src="./Resources/images/blurred traffic.jpeg">
+            <figcaption>LaneChatter</figcaption>
+          </figure>
+          <figure>
+            <img src="./Resources/images/tires.jpeg">
+            <figcaption>TigerTreads</figcaption>
+          </figure>
+          <figure>
+            <img src="./Resources/images/valet.jpeg">
+            <figcaption>ValetToday</figcaption>
+          </figure>
+        </div>
+      </section>
     </main>
   </body>
 </html>
