add footer section to html and css, as well as nav links

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
     <header>
       <h1 class="title">The VC Experience</h1>
       <ul class="nav">
-        <li><a href="#">Mission Statement</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Investment Team</a></li>
+        <li><a href="#mission">Mission Statement</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#team">Investment Team</a></li>
       </ul>
     </header>
     <main>
-      <section class="mission">
+      <section id="mission">
         <div class="mission-text">
           <h2>The VC Experience</h2>
           <p>Our fund is committed to the furthering entrepreneurs in the mobility sector.</p>
         </div>
       </section>
-      <section class="portfolio">
+      <section id="portfolio">
         <h2>Our Mobility Portfolio</h2>
         <p>Impacting diverse sectors of mobility to better the human experience and the world we inhabit</p>
         <div class="container">
@@ -47,6 +47,32 @@
           </figure>
         </div>
       </section>
+      <section id="team">
+        <h2>Our Team</h2>
+        <div class="members">
+          <div class="team-member">
+            <img src="./Resources/images/leo dicap.jpeg">
+            <h3>Leonardo DiCaprio</h3>
+            <p>C.E.O. - Founder and Principal Investor</p>
+          </div>
+          <div class="team-member">
+            <img src="./Resources/images/random guy.jpeg">
+            <h3>Joe Smith</h3>
+            <p>Partner - Research & Development</p>
+          </div>
+          <div class="team-member">
+            <img src="./Resources/images/lady.jpeg">
+            <h3>Jane Doe</h3>
+            <p>Partner - Partnerships & Marketing</p>
+          </div>
+        </div>
+      </section>
     </main>
+    <footer id="footer">
+      <h2>The VC Experience</h2>
+      <p>introduction@vcexperience.investors</p>
+      <p>555-867-5309</p>
+      <p class="copyright">copyright VC Enterprises 2020</p>
+    </footer>
   </body>
 </html>
